force-app/main/default/objects/RTL_Channel_Code_Mapping__mdt/RTL_Channel_Code_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>CR Web drop lead
to mapping channel code with lead group , campaign lead source and campaign reference</description>
    <label>Channel Code Mapping</label>
    <pluralLabel>Channel Code Mapping</pluralLabel>
</CustomObject>