force-app/main/default/objects/RTL_Channel_Code_Mapping__mdt/fields/RTL_Campaign_Reference__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Reference__c</fullName>
    <label>Campaign Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>