force-app/main/default/objects/RTL_Channel_Code_Mapping__mdt/fields/RTL_Channel_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_Channel_Code__c</fullName>
    <label>Channel Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>