force-app/main/default/objects/RTL_Channel_Code_Mapping__mdt/fields/RTL_Lead_Group__c.field-meta.xml
<CustomField>
    <fullName>RTL_Lead_Group__c</fullName>
    <label>Lead Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>